<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.avantica.xinef.dapp.view.activity.MainActivity">

    <item
        android:id="@+id/action_filter"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:orderInCategory="100"
        android:title="@string/filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_maps_map"
        android:icon="@drawable/ic_action_maps_map"
        android:orderInCategory="101"
        android:title="@string/menu_map"
        app:showAsAction="always" />
</menu>
