...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/department" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_department"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

...
